<resources>
    <string name="app_name">KoronApp</string>
    <string name="title_home">Home</string>
    <string name="title_available_demands">Available Demands</string>
    <string name="title_new_demand">New Demand</string>

    <string name="register">Register</string>
    <string name="log_in">Log In</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="pass_error_length">Password must be at least 6 characters long</string>
    <string name="reg_error_duplicate">Username already exists</string>
    <string name="auth_error">Username or password are incorrect</string>

    <string name="error_connection">No internet connection</string>
    <string name="error_server">Could not connect to server, please try again later</string>
    <string name="error_timeout">Connection timeout</string>
    <string name="error_crop">Your device doesn\'t support the crop action</string>
    <string name="error_image">Error loading image</string>

    <string name="tab_client">Client</string>
    <string name="tab_volunteer">Volunteer</string>

    <string name="log_out">Log Out</string>
    <string name="username_placeholder">Username</string>
    <string name="address_placeholder">Address</string>


    <string name="demand_title">Demand title</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="expiration_date">Expiration date</string>

    <string-array name="units">
        <item>kg</item>
        <item>pcs</item>
    </string-array>

    <string name="demand_button_create">CREATE</string>
    <string name="demand_button_update">UPDATE</string>
    <string name="demand_button_accept">ACCEPT</string>
    <string name="demand_button_complete">COMPLETE</string>
    <string name="demand_button_approve">APPROVE</string>

    <string name="splash">MTAA LS2021</string>
    <string name="demand_not_accepted">Demand has not been accepted yet</string>

</resources>