<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/login_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/log_in"
        app:titleTextColor="@color/colorPrimary" />

    <EditText
        android:id="@+id/usernameField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_toolbar"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="100dp"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:paddingBottom="20dp"
        android:autofillHints="" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/usernameField"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="11dp"
        android:paddingBottom="20dp"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:autofillHints="" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/passwordLayout"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/log_in"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:background="@color/colorPrimary"
        android:foreground="?android:attr/selectableItemBackground"
        android:enabled="false"/>

    <Button
        android:id="@+id/register_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/login_button"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/register"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:background="@color/colorPrimaryLight"
        android:foreground="?android:attr/selectableItemBackground"
        android:enabled="false"/>

</RelativeLayout>