<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.demand_detail.DemandDetailActivity">

    <include layout="@layout/content_demand_detail" />

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:toolbarId="@+id/toolbar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/demand_detail_title_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/demand_detail_title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:autofillHints=""
                            android:hint="@string/demand_title"
                            android:inputType="text" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/demand_detail_address_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/demand_detail_address"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:autofillHints=""
                            android:hint="@string/delivery_address"
                            android:inputType="text"
                            android:textSize="14sp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/demand_detail_expiration_date_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/demand_detail_expiration_date"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:autofillHints=""
                            android:focusable="false"
                            android:hint="@string/expiration_date"
                            android:inputType="date"
                            android:textSize="14sp" />
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <com.android.volley.toolbox.NetworkImageView
                    android:id="@+id/demand_avatar"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:inputType="text"
                    app:queryHint="Address..." />

            </LinearLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_demand_detail"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/demand_detail_new_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:contentDescription="Add new item"
        android:src="@drawable/ic_baseline_add_24" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>